upload and update

--- a/VRPsTW-STT.ipynb
+++ b/VRPsTW-STT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "4         5     55.0     20.0    19.0       149.0     159.0     10.0   NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CUST NO.</th>\n",
+       "      <th>XCOORD.</th>\n",
+       "      <th>YCOORD.</th>\n",
+       "      <th>DEMAND</th>\n",
+       "      <th>READY TIME</th>\n",
+       "      <th>DUE DATE</th>\n",
+       "      <th>SERVICE</th>\n",
+       "      <th>TIME</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.00000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>33.04000</td>\n",
+       "      <td>34.560000</td>\n",
+       "      <td>13.040000</td>\n",
+       "      <td>91.560000</td>\n",
+       "      <td>110.360000</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.359801</td>\n",
+       "      <td>17.27831</td>\n",
+       "      <td>18.823921</td>\n",
+       "      <td>7.645696</td>\n",
+       "      <td>43.344627</td>\n",
+       "      <td>46.218575</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.00000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>20.00000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>30.00000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>105.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>45.00000</td>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>124.000000</td>\n",
+       "      <td>136.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>25.000000</td>\n",
+       "      <td>65.00000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>161.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CUST NO.   XCOORD.    YCOORD.     DEMAND  READY TIME    DUE DATE  \\\n",
+       "count  25.000000  25.00000  25.000000  25.000000   25.000000   25.000000   \n",
+       "mean   13.000000  33.04000  34.560000  13.040000   91.560000  110.360000   \n",
+       "std     7.359801  17.27831  18.823921   7.645696   43.344627   46.218575   \n",
+       "min     1.000000   5.00000   5.000000   0.000000    0.000000   42.000000   \n",
+       "25%     7.000000  20.00000  20.000000   8.000000   63.000000   77.000000   \n",
+       "50%    13.000000  30.00000  35.000000  12.000000   87.000000  105.000000   \n",
+       "75%    19.000000  45.00000  49.000000  19.000000  124.000000  136.000000   \n",
+       "max    25.000000  65.00000  65.000000  29.000000  161.000000  230.000000   \n",
+       "\n",
+       "       SERVICE  TIME  \n",
+       "count     25.0   0.0  \n",
+       "mean       9.6   NaN  \n",
+       "std        2.0   NaN  \n",
+       "min        0.0   NaN  \n",
+       "25%       10.0   NaN  \n",
+       "50%       10.0   NaN  \n",
+       "75%       10.0   NaN  \n",
+       "max       10.0   NaN  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +556,7 @@
        "24        25     65.0     35.0       153.0     163.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,16 +567,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2a15f80e4d0>]"
+       "[<matplotlib.lines.Line2D at 0x24e698a9e10>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -438,10 +598,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'docplex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdocplex\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmp\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Model\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Create model\u001b[39;00m\n\u001b[0;32m      4\u001b[0m mdl \u001b[38;5;241m=\u001b[39m Model(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLP\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'docplex'"
+     ]
+    }
+   ],
+   "source": [
+    "from docplex.mp.model import Model\n",
+    "\n",
+    "# Create model\n",
+    "mdl = Model('LP')\n",
+    "\n",
+    "# Parameters\n",
+    "N = [n for n in range(1, df.shape[0]+1)]  # 25 variables\n",
+    "\n",
+    "# Variables\n",
+    "x_dict = [1, 2, 3]\n",
+    "x = mdl.continuous_var_dict(x_dict, lb=0, name='x')\n",
+    "\n",
+    "# Constraints \n",
+    "mdl.add_constraint(3*x[1]+x[2]+x[3] <= 60)\n",
+    "mdl.add_constraint(x[1]-x[2]+2*x[3] <= 10)\n",
+    "mdl.add_constraint(x[1]+x[2]-x[3] <= 20)\n",
+    "\n",
+    "Z = mdl.continuous_var(lb=0, name='Z')\n",
+    "mdl.add_constraint(Z == 2*x[1] - x[2] + x[3])\n",
+    "mdl.maximize(Z)\n",
+    "\n",
+    "mdl.print_information()\n",
+    "\n",
+    "solution = mdl.solve()\n",
+    "\n",
+    "print(solution)\n",
+    "print(solution._solve_details)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
