--- a/routing2.ipynb
+++ b/routing2.ipynb
@@ -176,15 +176,9 @@
     "plt.axis([0,75,0,75])\n",
     "\n",
     "plt.grid(True)\n",
-    "plt.plot()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.plot()\n",
+    "\n",
+    "\n",
     "file_name = f\"vrp_{number_of_customers}c.png\"\n",
     "\n",
     "file_path = images_path + file_name\n",
@@ -522,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -555,32 +549,16 @@
     "\n",
     "plt.grid(True)\n",
     "#plt.legend(bbox_to_anchor=(1.05, 0), loc='lower left', borderaxespad=0.)\n",
-    "plt.plot()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "plt.plot()\n",
+    "\n",
     "stochastic = '_stochastic' if c != {(i, j): np.hypot(xc[i]-xc[j], yc[i]-yc[j]) for i, j in A} else ''\n",
     "\n",
     "file_name = f'\\\\vrp_{number_of_customers}c_{timelimit}s_solution' + stochastic\n",
     "\n",
     "file_path = images_path + file_name\n",
     "\n",
-    "plt.savefig(rf'{file_path}'+'.png')\n"
+    "plt.savefig(rf'{file_path}'+'.svg')\n",
+    "\n"
    ]
   }
  ],
